@@ -34,7 +34,12 @@ if ($modx->user->hasSessionContext('mgr') && !empty($showLog)) {
 // Return output
 if (!empty($returnIds)) {
 	$modx->setPlaceholder('pdoResources.log', $log);
-	return $output;
+	if (!empty($toPlaceholder)) {
+		$modx->setPlaceholder($toPlaceholder, $output);
+	}
+	else {
+		return $output;
+	}
 }
 elseif (!empty($toSeparatePlaceholders)) {
 	$output['log'] = $log;
